# 7of9_parseRGB

./: .gitignore  CMakeLists.txt  CMakelists.txt  parseRGB.c  parseRGB.h
.circleci/: config.yml
test/: CMakeLists.txt  test.cpp
